--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/adapter-neon": "^6.5.0",
     "@prisma/client": "^6.5.0",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "ws": "^8.18.1"
