--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/adapter-neon": "^6.5.0",
     "@prisma/client": "^6.5.0",
+    "lucide-react": "^0.482.0",
     "next": "^15.2.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
