--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@google/generative-ai": "^0.24.0",
     "@mapbox/search-js-react": "^1.0.0",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/adapter-neon": "^6.5.0",
     "@prisma/client": "^6.5.0",
+    "bcryptjs": "^3.0.2",
     "lucide-react": "^0.482.0",
     "next": "^15.2.2",
     "next-auth": "^4.24.11",
